<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/heading_img">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="3dp"
            android:layout_marginBottom="16dp"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/about_the_developer"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:background="@drawable/heading_img"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/yawar"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/usama"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/supervisor_name"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/heading_img">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:paddingTop="28dp"
            android:text="@string/dept"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>